# cpp-log4shib

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  Portfile  Portfile.in  README  THANKS  autogen.sh  configure.ac  configure.in  log4shib-config.in  log4shib.m4  log4shib.pc.in  log4shib.spec.in
bcb5/: Makefile.am  bcb5.bpg  bcb5.mak
bcb5/log4shib/: Makefile.am  log4shib.bpf  log4shib.bpr  log4shib.mak
bcb5/testCategory/: testCategory.bpf  testCategory.bpr  testCategory.mak
bcb5/testConfig/: testConfig.bpf  testConfig.bpr  testConfig.mak
bcb5/testFixedContextCategory/: testFixedContextCategory.bpf  testFixedContextCategory.bpr  testFixedContextCategory.mak
bcb5/testNDC/: testNDC.bpf  testNDC.bpr  testNDC.mak
bcb5/testPattern/: testPattern.bpf  testPattern.bpr  testPattern.mak
bcb5/testmain/: testmain.bpf  testmain.bpr  testmain.mak
config/: .gitignore
debian/: Makefile.am  changelog  control  copyright  liblog4shib-dev.dirs  liblog4shib-dev.files  liblog4shib-doc.files  liblog4shib0.files  liblog4shib0.postinst  rules
doc/: .gitignore  Doxyfile.in  Makefile.am
doc/html/: index.html
include/: .gitignore  Makefile.am  config.h.in
include/log4shib/: .gitignore  AbortAppender.hh  Appender.hh  AppenderSkeleton.hh  BasicConfigurator.hh  BasicLayout.hh  Category.hh  CategoryStream.hh  Configurator.hh  Export.hh  FileAppender.hh  Filter.hh  FixedContextCategory.hh  HierarchyMaintainer.hh  IdsaAppender.hh  Layout.hh  LayoutAppender.hh  LoggingEvent.hh  Makefile.am  NDC.hh  NTEventLogAppender.hh  OstreamAppender.hh  PatternLayout.hh  Portability.hh  Priority.hh  PropertyConfigurator.hh  RemoteSyslogAppender.hh  RollingFileAppender.hh  SimpleConfigurator.hh  SimpleLayout.hh  StringQueueAppender.hh  SyslogAppender.hh  TimeStamp.hh  Win32DebugAppender.hh  config-openvms.h  config-win32.h
include/log4shib/threading/: BoostThreads.hh  DummyThreads.hh  MSThreads.hh  Makefile.am  OmniThreads.hh  PThreads.hh  Threading.hh
m4/: .gitignore  AC_CREATE_PREFIX_CONFIG_H.m4  AC_CXX_HAVE_SSTREAM.m4  AC_CXX_NAMESPACES.m4  AC_C_INT64_T.m4  AC_FUNC_SNPRINTF.m4  PETI_PEDANTIC_GCC.m4  ac_config_libconfig_in.m4  ac_config_pkgconfig_in.m4  ax_prefix_config_h.m4
msvc10/: Makefile.am  msvc10.sln
msvc10/log4shib/: Makefile.am  log4shib.vcxproj
msvc10/log4shibDLL/: Makefile.am  log4shibDLL.rc  log4shibDLL.vcxproj
msvc10/testCategory/: Makefile.am  testCategory.vcxproj
msvc10/testMain/: Makefile.am  testMain.vcxproj
msvc10/testNDC/: Makefile.am  testNDC.vcxproj
msvc10/testNTEventLog/: Makefile.am  testNTEventLog.vcxproj
msvc10/testPattern/: Makefile.am  testPattern.vcxproj
msvc14/: msvc14.sln
msvc14/log4shib/: log4shib.vcxproj
msvc14/log4shibDLL/: log4shibDLL.vcxproj
msvc14/sscpp706/: sscpp706.VCXPROJ
msvc14/testCategory/: testCategory.vcxproj
msvc14/testMain/: testMain.vcxproj
msvc14/testNDC/: testNDC.vcxproj
msvc14/testNTEventLog/: testNTEventLog.vcxproj
msvc14/testPattern/: testPattern.vcxproj
msvc15/: msvc15.sln
msvc15/NTEventLogAppender/: NTEventLogCategories.vcxproj  NTEventLogCategories.vcxproj.filters
msvc15/log4shib/: log4shib.vcxproj
msvc15/log4shibDLL/: log4shibDLL.rc  log4shibDLL.vcxproj
msvc15/sscpp706/: sscpp706.VCXPROJ  sscpp706.VCXPROJ.filters
msvc15/testCategory/: testCategory.vcxproj
msvc15/testMain/: testMain.vcxproj
msvc15/testNDC/: testNDC.vcxproj
msvc15/testNTEventLog/: testNTEventLog.vcxproj
msvc15/testPattern/: testPattern.vcxproj
msvc6/: Makefile.am  msvc6.dsw
msvc6/log4shib/: Makefile.am  log4shib.dsp
msvc6/log4shibDLL/: .gitignore  Makefile.am  log4shibDLL.dsp  log4shibDLL.rc
msvc6/testDLL/: testDLL.dsp
msvc6/testMain/: testMain.dsp
msvc6/testNTEventLog/: testNTEventLog.dsp
msvc6/testPattern/: testPattern.dsp
msvc8/: .gitignore  Makefile.am  msvc8.sln
msvc8/log4shib/: Makefile.am  log4shib.vcproj
msvc8/log4shibDLL/: .gitignore  log4shibDLL.rc  log4shibDLL.vcproj
msvc8/testCategory/: Makefile.am  testCategory.vcproj
msvc8/testDLL/: .gitignore  Makefile.am  testDLL.vcproj
msvc8/testMain/: Makefile.am  testMain.vcproj
msvc8/testNDC/: Makefile.am  testNDC.vcproj
msvc8/testNTEventLog/: .gitignore  Makefile.am  testNTEventLog.vcproj
msvc8/testPattern/: Makefile.am  testPattern.vcproj
msvc9/: Makefile.am  msvc9.sln
msvc9/log4shib/: log4shib.vcproj
msvc9/log4shibDLL/: Makefile.am  log4shibDLL.rc  log4shibDLL.vcproj
msvc9/testCategory/: testCategory.vcproj
msvc9/testDLL/: testDLL.vcproj
msvc9/testMain/: testMain.vcproj
msvc9/testNDC/: testNDC.vcproj
msvc9/testNTEventLog/: testNTEventLog.vcproj
msvc9/testPattern/: testPattern.vcproj
src/: AbortAppender.cpp  Appender.cpp  AppenderSkeleton.cpp  BasicConfigurator.cpp  BasicLayout.cpp  Category.cpp  CategoryStream.cpp  Configurator.cpp  DllMain.cpp  DummyThreads.cpp  FileAppender.cpp  Filter.cpp  FixedContextCategory.cpp  HierarchyMaintainer.cpp  IdsaAppender.cpp  LayoutAppender.cpp  LoggingEvent.cpp  MSThreads.cpp  Makefile.am  NDC.cpp  NTEventLogAppender.cpp  OmniThreads.cpp  OstreamAppender.cpp  PThreads.cpp  PatternLayout.cpp  PortabilityImpl.cpp  PortabilityImpl.hh  Priority.cpp  Properties.cpp  Properties.hh  PropertyConfigurator.cpp  PropertyConfiguratorImpl.cpp  PropertyConfiguratorImpl.hh  RemoteSyslogAppender.cpp  RollingFileAppender.cpp  SimpleConfigurator.cpp  SimpleLayout.cpp  StringQueueAppender.cpp  StringUtil.cpp  StringUtil.hh  (+4 more)
tests/: .gitignore  Clock.cpp  Clock.hh  Makefile.am  log4shib.init  log4shib.properties  sscpp706.cpp  sscpp706.txt  testCategory.cpp  testConfig.cpp  testConfig.log4shib.properties  testErrorCollision.cpp  testFilter.cpp  testFixedContextCategory.cpp  testNDC.cpp  testNTEventLog.cpp  testPattern.cpp  testPriority.cpp  testProperties.cpp  testProperties.properties  testPropertyConfig.cpp  testbench.cpp  testmain.cpp
